cokra-rs/tui/src/exec_cell/snapshots/cokra_tui__exec_cell__render__tests__snapshot_failed_shell_tool.snap
---
source: tui/src/exec_cell/render.rs
expression: rendered
---
"✗ shell (10ms)                                              "
"  $ cat /nonexistent                                        "
"  └ cat: /nonexistent: No such file or directory            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
