cokra-rs/tui/src/exec_cell/snapshots/cokra_tui__exec_cell__render__tests__snapshot_list_dir_tool_completed.snap
---
source: tui/src/exec_cell/render.rs
expression: rendered
---
"✓ list_dir                                                  "
"  › list_dir                                                "
"  └ src/                                                    "
"    Cargo.toml                                              "
"    README.md                                               "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
