cokra-rs/tui/src/exec_cell/snapshots/cokra_tui__exec_cell__render__tests__snapshot_mixed_tools_in_one_cell.snap
---
source: tui/src/exec_cell/render.rs
expression: rendered
---
"✓ shell                                                     "
"  $ ls -la /tmp                                             "
"  └ total 8                                                 "
"    drwxrwxrwt 2 root root 40 Jan  1 00:00 .                "
"                                                            "
"✓ read_file                                                 "
"  › main.rs                                                 "
"  └ 1: fn main() {                                          "
"    2:   println!("hello");                                 "
"    3: }                                                    "
"                                                            "
"✓ list_dir                                                  "
"  › src                                                     "
"  └ src/                                                    "
"    Cargo.toml                                              "
"    README.md                                               "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
