cokra-rs/tui/src/exec_cell/snapshots/cokra_tui__exec_cell__render__tests__snapshot_read_file_tool_completed.snap
---
source: tui/src/exec_cell/render.rs
expression: rendered
---
"✓ read_file                                                 "
"  › read_file                                               "
"  └ 1: fn main() {                                          "
"    2:   println!("hello");                                 "
"    3: }                                                    "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
