cokra-rs/tui/src/exec_cell/snapshots/cokra_tui__exec_cell__render__tests__snapshot_shell_tool_completed.snap
---
source: tui/src/exec_cell/render.rs
assertion_line: 324
expression: rendered
---
"✓ shell                                                     "
"  $ ls -la /tmp                                             "
"  └ total 8                                                 "
"    drwxrwxrwt 2 root root 40 Jan  1 00:00 .                "
"  ✓ • 0s                                                    "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
